# Aether

./: .env.example  .gitignore  AETHER_PROJECT_REPORT.md  Cargo.toml  IMPLEMENTATION_DEFINED.md  KNOWN_LIMITATIONS.md  LICENSE.txt  README.md  context.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temp_debug.c  vercel.json  verify_wasm.js
apps/web/: copy_wasm.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: _headers  aether_wasm_bg.wasm
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/playground/: page.tsx
apps/web/src/components/: ClifCfg.tsx  ClifPanel.tsx  DisassemblyPanel.tsx  ExecutionPanel.tsx  LandingPage.tsx  PanelTabs.tsx  ResizableLayout.tsx  TreeView.tsx  Visualizer.tsx
apps/web/src/components/compiler/: ASTViewer.tsx  CFGViewer.tsx  GraphCanvas.tsx  HIRViewer.tsx  IRAssemblyViewer.tsx  PipelineVisualizer.tsx  TokenViewer.tsx
apps/web/src/components/debugger/: CallStackViewer.tsx  MemoryViewer.tsx  StackViewer.tsx  Timeline.tsx  VMDebugger.tsx
apps/web/src/components/editor/: CodeEditor.tsx
apps/web/src/components/ui/: shiny-button.tsx  text-hover-effect.tsx  valley-of-the-mind.tsx
apps/web/src/components/workspace/: WorkspaceHeader.tsx
apps/web/src/lib/wasm/: compiler.ts
apps/web/src/store/: useStore.ts
apps/web/src/stores/: compilerStore.ts
apps/web/src/types/: compiler.ts  d3-hierarchy.d.ts
apps/web/src/utils/: cfgLayout.ts  clifMapper.ts  clifParser.ts  examplePrograms.ts  permalink.ts  treeParser.ts
fuzz/: Cargo.toml
reference/: AUDIT_REPORT.md
