[workspace]
members = ["packages/core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ahmad Hassan <your@email.com>"]
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/YOUR_USERNAME/aether"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
