# ADR: Monorepo workspace structure (Aether, 2026-07-08)
#
# packages/core/          — the `saltwater` (swcc) binary crate
# packages/core/saltwater-parser/   — library: lexer, preprocessor, parser, semantic analysis → HIR
# packages/core/saltwater-codegen/  — library: Cranelift CLIF IR + native code generation
#
# The root Cargo.toml is the workspace root ONLY (no [package] here).
# This keeps `cargo build --workspace` / `cargo test --workspace` working from the
# repo root, while the Turborepo `core:build` script targets packages/core/Cargo.toml.
#
# Future crates (aether-vm, aether-wasm) will be added as additional workspace members.

[workspace]
members = [
    "packages/core",
    "packages/core/saltwater-parser",
    "packages/core/saltwater-codegen",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
debug = false  # speeds up link time

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
